@@ -1,5 +1,11 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - criteria_md5 attribute is added to the review autoqc result object;
+   previously it was computed at a point of loading to the database
+   and was available only in objects retrieved from the database;
+   availability of this value at check execution time will be useful
+   for planned generalisation of the review check
+
 npg_qc release 68.0.0
  - interop parser - extra tests and a fix for some result hash keys
  - provisions for having an array of result objects in the result
